<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/layout_bg"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="7dp"
    android:paddingTop="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="left|top"
                android:contentDescription="@string/Insert"
                android:src="@drawable/ic_launcher" />
        
        <LinearLayout
            android:id="@+id/layoutOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvPlaceId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/lat"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/ln"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="15dp"
                android:text="@string/date"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/black"
                android:padding="5dp"
                android:text="@string/distan"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="bottom"
                android:text="@string/time"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>