<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <TextView
            android:id="@+id/tvPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/black"
            android:gravity="center"
            android:layout_gravity="top"
            android:padding="10dp"
            android:text="@string/placeInfo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace" />

        <ImageView
            android:id="@+id/ivTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="20dp"
            android:src="@drawable/ic_launcher" />

          <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical"
         >
        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/black"
            android:onClick="dispatchTakePictureIntent"
            android:padding="14dp"
            android:text="@string/take"
            android:textColor="#FFFFFF"
            android:typeface="monospace" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvetLatitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/latitude"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#384248"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/etLatitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                
                android:enabled="false"
                android:focusable="false"
                android:inputType="numberDecimal"
                android:textColor="#384248" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvetLongitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/longtitude"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#384248"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/etLongitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                
                android:enabled="false"
                android:inputType="numberDecimal"
                android:focusable="false"
                android:textColor="#384248" />
        </LinearLayout>
        
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvetName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/Name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#384248"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/etPlaceName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                
                android:inputType="text"
                android:textColor="#384248" />
        </LinearLayout>
        
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvetEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#384248"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/etPlaceEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                
                android:inputType="textEmailAddress"
                android:textColor="#384248" />
        </LinearLayout>
        
           <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvetPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/phone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#384248"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/etPlacePhone"
                android:inputType="phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                
                
                android:textColor="#384248" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvetDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#384248"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:inputType="textMultiLine"
            android:textColor="#384248" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center_vertical"
     >    
        <Button
            android:id="@+id/btnInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical"
            android:background="@drawable/black"
            android:onClick="insertData"
            android:text="@string/savePlace"
            android:textColor="#FFFFFF"
            android:typeface="monospace" />
        </LinearLayout>      
    </LinearLayout>

</ScrollView>