<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/black"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvMyVisitingPlacesList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="13dp"
                android:text="@string/topest"p
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:paddingBottom="10dp"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/black"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvMyCurrentPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yourCurrentLocation"
                android:textColor="#fff"
                android:paddingLeft="13dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold"
                
                android:typeface="monospace" />

            <TextView
                android:id="@+id/tvMyCurrentPositionLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:paddingLeft="13dp"
                android:text="@string/lat"
                android:textColor="#fff"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvMyCurrentPositionLong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="13dp"
                android:layout_marginRight="5dp"
                android:text="@string/longi"
                android:textColor="#fff"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/lvPlacesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

</LinearLayout>