<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    android:orientation="vertical" >
    
    <TextView
            android:id="@+id/tvPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/details"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="monospace" />
    
<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        

        <ImageView
            android:id="@+id/ivTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="20dp"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/black"
            android:padding="2dp"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/imageButtonEmail"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:layout_marginRight="50dp"
               
                android:src="@drawable/email" />

            <ImageButton
                android:id="@+id/imageButtonPhone"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:layout_marginRight="50dp"
                android:src="@drawable/phone" />
            
            
            
            <ImageButton
                android:id="@+id/imageButtonAddContract"
                android:layout_width="30dp"
                android:padding="3dp"
                android:layout_height="30dp"
                android:layout_marginRight="50dp"
                android:src="@drawable/addcontract" />
            
            <ImageButton
                android:id="@+id/imageButtonSms"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:padding="3dp"
                android:src="@drawable/sms" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvetLatitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/latitude"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/etLatitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:enabled="false"
                    android:focusable="false"
                    
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvetLongitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/longtitude"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/etLongitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:enabled="false"
                    android:focusable="false"
                    
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/datev"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:enabled="false"
                    android:focusable="false"
                    
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/timev"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/etTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:enabled="false"
                    android:focusable="false"
                    
                    android:textColor="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvetDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                
                android:typeface="monospace" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textMultiLine"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/black"
                android:onClick="insertData"
                android:padding="14dp"
                android:text="@string/savePlace"
                android:textColor="#FFFFFF"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/black"
                android:onClick="insertData"
                android:padding="14dp"
                android:text="@string/delete"
                android:textColor="#FFFFFF"
                android:typeface="monospace" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>

</LinearLayout>